--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,8 +8,8 @@
     <h1>Login</h1>
     <form method="POST" action="/login">
         {{ form.hidden_tag() }}
-        {{ form.email.label }} {{ form.email(size=20) }}
-        {{ form.password.label }} {{ form.password(size=20) }}
+        {{ form.Username.label }} {{ form.Username(size=20) }}
+        {{ form.Password.label }} {{ form.Password(size=20) }}
         <input type="submit" value="login">
     </form>
 </body>
